# nettracer-bpf

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE.txt  README.md  Vagrantfile  conanfile.txt  devspace.yaml  test
.github/actions/build-docker-image/: action.yaml
.github/actions/configure/: action.yaml
.github/actions/unit-tests/: action.yaml
.github/workflows/: build-and-test.yaml  c-cpp.yml  main-push.yaml  master-push.yaml
bpf_generic/: CMakeLists.txt  bpf_loading.cpp  bpf_loading.h  bpf_wrapper.h  kernel_version.cpp  kernel_version.h  log.cpp  maps_loading.cpp  maps_loading.h  perf_event.h  perf_sys.h
bpf_generic/src/: CMakeLists.txt  bpf_interface.h  bpf_loading.cpp  bpf_loading.h  bpf_wrapper.cpp  bpf_wrapper.h  btf_loader.cpp  btf_loader.h  classic_loader.cpp  classic_loader.h  elf_utils.cpp  elf_utils.h  errors.h  kernel_version.cpp  kernel_version.h  log.cpp  log.h  maps_def.h  maps_loading.cpp  maps_loading.h  perf_event.cpp  perf_event.h  perf_sys.h  system_calls.cpp  system_calls.h  system_utils.cpp  system_utils.h
bpf_generic/test/: CMakeLists.txt
bpf_generic/test/cpp/: kernel_version_test.cpp  mock_system_calls.h  system_utils_test.cpp
bpf_program/: CMakeLists.txt  asm_inline.h  bpf_helpers.h  log.h  maps.h  metrics_utilities.h  nettracer-bpf.c  nettracer-bpf.h  offset_guessing.h  print.h  tuples_utilities.h
bpf_program/legacy/: asm_inline.h  bpf_helpers.h  log.h  maps.h  offset_guessing.h  other.h
bpf_program/probes/: connections.h  metrics.h  other.h
dev-docker/: Dockerfile
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
libnettracer/src/: CMakeLists.txt  bpf_debug_counters.cpp  bpf_debug_counters.h  bpf_events.cpp  bpf_events.h  config_watcher.cpp  config_watcher.h  connections_printing.cpp  connections_printing.h  inotify_watcher.cpp  inotify_watcher.h  localsock.cpp  localsock.h  localsock6.cpp  localsock6.h  netstat.cpp  netstat.h  offsetguess.cpp  offsetguess.h  proc_tcp.cpp  proc_tcp.h  system_calls.cpp  system_calls.h  system_utils.cpp  system_utils.h  tuple_utils.cpp  tuple_utils.h
libnettracer/src/cpp/: connections_printing.cpp  connections_printing.h  localsock.cpp  localsock.h  localsock6.cpp  localsock6.h  netstat.cpp  netstat.h  offsetguess.cpp  offsetguess.h  proc_tcp.cpp  tuple_utils.h
libnettracer/test/: CMakeLists.txt
libnettracer/test/cpp/: bpf_debug_counters_test.cpp  bpf_maps_processing_testing.h  connection_test.cpp  connections_printing_test.cpp  log_redirection.h  mock_bpf_maps.h  mock_bpf_maps_test.cpp  mock_system_calls.h  netstat_test.cpp  proc_tcp_test.cpp  system_utils_test.cpp  tuple_utils_test.cpp
nettracer/: CMakeLists.txt  main.cpp
nettracersrv/: CMakeLists.txt  nettracer.cpp  unified_log.cpp  unified_log.h
